test/invalid_syntax_error2.spt.expected
../seephit.h:697:7:   in constexpr expansion of 'ParseError(((const char*)"Expecting a close tag")).ErrLine::operator[](((size_t)iLine))'
invalid_syntax_error2.spt:1:1: error: array subscript value '4' is outside the bounds of array type 'int [0]'
