test/invalid_syntax_error2.spt
R"*(
<HTML>
  <DIV> 
    Space after open bracket
  < /DIV>
</HTML>
)*"_html; 